chore: fix article pnpm

--- a/src/blog/2025-11-25-pnpm.md
+++ b/src/blog/2025-11-25-pnpm.md
@@ -18,7 +18,7 @@ description: "Discover why pnpm outperforms npm with faster installations, bette
 
 ## Why pnpm Outperforms npm
 
-### 💾 Disk Space Efficiency
+### Disk Space Efficiency
 
 `pnpm`'s most compelling advantage is its smart approach to storing packages. Instead of duplicating packages across projects like `npm` does, `pnpm` uses a content-addressed storage system that stores each package version only once globally. If multiple projects share the same dependency, `pnpm` creates hard links to a single copy rather than duplicating it. This can save **gigabytes** of disk space in development environments with numerous projects.
 
@@ -30,7 +30,7 @@ Because `pnpm` leverages its global store and efficient caching, installation ti
 
 `pnpm` prevents "phantom dependencies"—accessing packages not explicitly declared in your `package.json`. This forces better dependency practices and reduces implicit access issues that plague `npm`.
 
-### 📦 Better Monorepo Support
+### Better Monorepo Support
 
 `pnpm` has built-in workspace features for managing multiple packages seamlessly, making it ideal for large-scale monorepo projects.
 
@@ -71,4 +71,4 @@ pnpm update -i -L
 
 ## The Bottom Line
 
-`pnpm` delivers faster installations, better disk usage, and stricter dependency management—making it an excellent choice for modern JavaScript projects. The migration is straightforward, and the benefits are immediate. Give your projects the performance boost they deserve!
+`pnpm` delivers faster installations, better disk usage, and stricter dependency management—making it an excellent choice for modern JavaScript projects. The migration is straightforward, and the benefits are immediate. Try it out!
